bisonc++ (6.00.00)

  * The generated code was rewritten. The protected interface of ParserBase
    and names of parse()-related members in Parser was modified. The names of
    all accessible members in parserbase.h and parser.h now have two trailing
    underscore characters. 
    Predefined members in parser.ih no longer have trailing underscores, and
    can be redefined.  
    The traditional error(char const *) member in fact never uses its argument
    (and bisonc++ only passed the default "Syntax error" argument). Its
    prototype now no longer defines a parameter.  Here's an overview of
    modified member names/signatures:

        --------------------------------------------------------
        Before 6.00.00               Starting with 6.00.00
        --------------------------------------------------------
        void error(char const *);    void error();
    
        void exceptionHandler__(...  void exceptionHandler(...
    
        void errorRecovery();        void errorRecovery__();
        void executeAction(int);     void executeAction__(int);
        void nextToken();            void nextToken__();
        --------------------------------------------------------
    
                                     added:
                                     ---------------------------
                                     void nextCycle__();
                                     ---------------------------
                                     removed:
                                     ---------------------------
                                     int lookup(bool);
                                     ---------------------------

    When re-generating parsers generated by bisonc++ before version 6.00.00,
    the signatures of the above functions in the file parser.h must be
    hand-modified to reflect the above changes. In addition, the
    implementations of error and exceptionHandler (default implementations