@@ -5,14 +5,20 @@
     body {color: #27408B; background: #FFFAF0;}
     figure {text-align: center;}
     img {vertical-align: center;}
+    .XXfc {margin-left:auto;margin-right:auto;}
+    .XXtc {text-align: center;}
+    .XXtl {text-align: left;}
+    .XXtr {text-align: right;}
+    .XXvt {vertical-align: top;}
+    .XXvb {vertical-align: bottom;}
 </style>
 <link rev="made" href="mailto:Frank B. Brokken: f.b.brokken@rug.nl">
 </head>
 <body>
 <hr/>
 <h1 id="title">bisonc++input(7)</h1>
-<h2 id="author">bisonc++ grammar file organization<br/>(bisonc++.6.00.00.tar.gz)</h2>
-<h2 id="date">2005-2017</h2>
+<h2 id="author">bisonc++ grammar file organization<br/>(bisonc++.6.01.00.tar.gz)</h2>
+<h2 id="date">2005-2018</h2>
 
 
 <p>
