@@ -1,20 +1,26 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title>Bisonc++ V 6.00.00</title>
+<title>Bisonc++ V 6.01.00</title>
 <style type="text/css">
     .centered {margin:0px auto;display:block;}
     body {color: #27408B; background: #FFFAF0;}
     figure {text-align: center;}
     img {vertical-align: center;}
+    .XXfc {margin-left:auto;margin-right:auto;}
+    .XXtc {text-align: center;}
+    .XXtl {text-align: left;}
+    .XXtr {text-align: right;}
+    .XXvt {vertical-align: top;}
+    .XXvb {vertical-align: bottom;}
 </style>
 <link rev="made" href="mailto:f.b.brokken@rug.nl">
 </head>
 <body>
 <hr/>
-<h1 id="title">Bisonc++ V 6.00.00</h1>
+<h1 id="title">Bisonc++ V 6.01.00</h1>
 <h2 id="author">Frank B. Brokken (f.b.brokken@rug.nl)<br/></h2>
 
-<h2 id="affiliation">Center for Information Technology, University of Groningen</h2><h2 id="date">2005-2017</h2>
+<h2 id="affiliation">Center for Information Technology, University of Groningen</h2><h2 id="date">2005-2018</h2>
 
 
 <p>
@@ -33,6 +39,8 @@ by its tag or download the matching <code >.zip</code> or <code >.tar.gz</code> 
 release page):
 <p>
 <ul>
+        <li> <a href="https://github.com/fbb-git/bisoncpp/releases/tag/6.01.00">6.01.00</a>
+Jan 20 2018;
         <li> <a href="https://github.com/fbb-git/bisoncpp/releases/tag/6.00.00">6.00.00</a>
 May 18 2017;
         <li> <a href="https://github.com/fbb-git/bisoncpp/releases/tag/5.03.00">5.03.00</a>
@@ -40,9 +48,7 @@ Jan 28 2017;
         <li> <a href="https://github.com/fbb-git/bisoncpp/releases/tag/5.02.01">5.02.01</a>
 May 20 2016;
         <li> <a href="https://github.com/fbb-git/bisoncpp/releases/tag/5.02.00">5.02.00</a>
-May 15 2016;
-        <li> <a href="https://github.com/fbb-git/bisoncpp/releases/tag/5.01.00">5.01.00</a>
-May 06 2016.
+May 15 2016.
         </ul>
     
 <p>
