@@ -1,9 +1,15 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title> <div style="text-align: center"><strong >Bisonc++</strong> (Version 6.00.00) User Guide</div> </title>
+<title> <div style="text-align: center"><strong >Bisonc++</strong> (Version 6.01.00) User Guide</div> </title>
 <style type="text/css">
     figure {text-align: center;}
     img {vertical-align: center;}
+    .XXfc {margin-left:auto;margin-right:auto;}
+    .XXtc {text-align: center;}
+    .XXtl {text-align: left;}
+    .XXtr {text-align: right;}
+    .XXvt {vertical-align: top;}
+    .XXvb {vertical-align: bottom;}
 </style>
 </head>
 <body text="#27408B" bgcolor="#FFFAF0">
@@ -50,7 +56,7 @@ B. Brokken</a>. The program's first version was
 constructed between November 2004 and May 2005.
 <p>
 <a name="l2"></a>
-<h2 >1.1: What's new in version 6.00.00</h2>
+<h2 >1.1: What's new in version 6.01.00</h2>
     If you're new to <strong >bisonc++</strong>, you can safely skip this section. If you used <strong >bisonc++</strong>
 before, please note the following new and modified features:
     <ul>
@@ -68,7 +74,7 @@ before, please note the following new and modified features:
 <blockquote >
     <table>
 
-    <td colspan=3><hr/></td>
+    <tr><td colspan=3><hr/></td></tr>
 
     
 <tr >
@@ -76,7 +82,7 @@ before, please note the following new and modified features:
  
 </tr>
 
-    <td colspan=3><hr/></td>
+    <tr><td colspan=3><hr/></td></tr>
 
     
 <tr >
@@ -121,7 +127,7 @@ before, please note the following new and modified features:
  
 </tr>
 
-    <td colspan=3><hr/></td>
+    <tr><td colspan=3><hr/></td></tr>
 
     
 <tr >
@@ -135,7 +141,7 @@ before, please note the following new and modified features:
  
 </tr>
 
-    <td colspan=3><hr/></td>
+    <tr><td colspan=3><hr/></td></tr>
 
     
 <tr >
@@ -149,7 +155,7 @@ before, please note the following new and modified features:
  
 </tr>
 
-    <td colspan=3><hr/></td>
+    <tr><td colspan=3><hr/></td></tr>
 
         
 </table>
