@@ -1,9 +1,15 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title> <div style="text-align: center"><strong >Bisonc++</strong> (Version 6.00.00) User Guide</div> </title>
+<title> <div style="text-align: center"><strong >Bisonc++</strong> (Version 6.01.00) User Guide</div> </title>
 <style type="text/css">
     figure {text-align: center;}
     img {vertical-align: center;}
+    .XXfc {margin-left:auto;margin-right:auto;}
+    .XXtc {text-align: center;}
+    .XXtl {text-align: left;}
+    .XXtr {text-align: right;}
+    .XXvt {vertical-align: top;}
+    .XXvb {vertical-align: bottom;}
 </style>
 </head>
 <body text="#27408B" bgcolor="#FFFAF0">
@@ -149,7 +155,7 @@ observed. In the algorithm <code >$</code> is not considered.
 Applying the above algorithm to the rules of our grammar we get:
     <table>
 
-    <td colspan=4><hr/></td>
+    <tr><td colspan=4><hr/></td></tr>
 
     
 <tr >
@@ -157,7 +163,7 @@ Applying the above algorithm to the rules of our grammar we get:
  
 </tr>
 
-    <td colspan=4><hr/></td>
+    <tr><td colspan=4><hr/></td></tr>
 
     
 <tr >
@@ -190,7 +196,7 @@ Applying the above algorithm to the rules of our grammar we get:
  
 </tr>
 
-    <td colspan=4><hr/></td>
+    <tr><td colspan=4><hr/></td></tr>
 
     
 <tr >
@@ -211,7 +217,7 @@ Applying the above algorithm to the rules of our grammar we get:
  
 </tr>
 
-    <td colspan=4><hr/></td>
+    <tr><td colspan=4><hr/></td></tr>
 
     
 <tr >
@@ -225,7 +231,7 @@ Applying the above algorithm to the rules of our grammar we get:
  
 </tr>
 
-    <td colspan=4><hr/></td>
+    <tr><td colspan=4><hr/></td></tr>
 
     
 <tr >
@@ -448,7 +454,7 @@ tokens must be reduced, forming an <code >expr</code>. This is the only valid co
 because shifting the `)' would produce the sequence of symbols
     <pre>
 
-    term ')'
+    term 'CLOSEPAR'
     
 </pre>
 
@@ -920,7 +926,7 @@ also (in more elaborate form) shown when the <code >--debug</code> option is pro
 <p>
 <table>
 
-    <td colspan=7><hr/></td>
+    <tr><td colspan=7><hr/></td></tr>
 
     
 <tr >
@@ -929,7 +935,7 @@ also (in more elaborate form) shown when the <code >--debug</code> option is pro
  
 </tr>
 
-    <td colspan=7><hr/></td>
+    <tr><td colspan=7><hr/></td></tr>
 
     
 <tr >
@@ -1120,7 +1126,7 @@ also (in more elaborate form) shown when the <code >--debug</code> option is pro
  
 </tr>
 
-    <td colspan=7><hr/></td>
+    <tr><td colspan=7><hr/></td></tr>
 
 
 </table>
